fix(docs): correct formatting of nav in 404 page metadata

--- a/docs/404.md
+++ b/docs/404.md
@@ -6,8 +6,9 @@ owner: '@lop-louis'
 refresh_after_days: 90
 change_type: patch
 status: live
-last_reviewed: 2025-11-07
-nav: none
+last_reviewed: '2025-11-07'
+nav:
+  - none
 ---
 
 # 404 - Page Not Found
