refactor: remove obsolete link-check script and replace with anchor conversion and heading normalization scripts
- Deleted `check-links.mjs` and `link-check.mjs` as they are no longer needed.
- Added `convert-anchors-to-markdown.mjs` to convert HTML anchors in markdown files to markdown links.
- Introduced `fix-inline-headings.mjs` to normalize bold headings in markdown files to H3.
- Created `make-headings-unique.mjs` to ensure unique headings across markdown files.
- Updated `docs-build.mjs` to remove the verification step for primary actions.
- Modified `ux-scan.mjs` to utilize markdown link regex for scanning links.
- Removed `verify-primary-actions.mjs` as its functionality is now covered by other scripts.

--- a/docs/404.md
+++ b/docs/404.md
@@ -14,11 +14,11 @@ nav:
 
 # 404 - Page Not Found
 
-The page you're looking for doesn't exist or may have been moved. <a href="https://github.com/lop-louis/northbook/issues/new?labels=question&title=[404]%20Missing%20Page" target="_blank" rel="noopener noreferrer" data-primary-action>Report the missing page</a> or <a href="/" data-secondary-action>Return to the homepage</a>.
+The page you're looking for doesn't exist or may have been moved. [Report the missing page](https://github.com/lop-louis/northbook/issues/new?labels=question&title=[404]%20Missing%20Page) or [Return to the homepage](/).
 
 ## Quick Navigation
 
-**Popular pages:**
+### Popular pages:
 
 - [Start Here](/band-a) - New to Northbook?
 - [Quick Checks](/fix/) - Common troubleshooting flows
