--- a/docs/404.md
+++ b/docs/404.md
@@ -20,10 +20,10 @@ The page you're looking for doesn't exist or may have been moved. [Report the mi
 
 ### Popular pages:
 
-- [Start Here](/band-a) - New to Northbook?
-- [Quick Checks](/fix/) - Common troubleshooting flows
-- [Playbook](/playbook/) - Principles and patterns
-- [Runbooks](/runbooks/) - Handover guides
+- [Start Here](./band-a) - New to Northbook?
+- [Quick Checks](./fix/index) - Common troubleshooting flows
+- [Playbook](./playbook/index) - Principles and patterns
+- [Runbooks](./runbooks/index) - Handover guides
 
 ## Search
 
@@ -33,7 +33,7 @@ Use the search bar above (press `/` to focus) to find what you need.
 
 ### Looking for a specific flow?
 
-Check the [Quick Checks index](/fix/) for step-by-step guides on:
+Check the [Quick Checks index](./fix/index) for step-by-step guides on:
 
 - MS Teams notifications
 - Repository access
@@ -42,7 +42,7 @@ Check the [Quick Checks index](/fix/) for step-by-step guides on:
 
 ### Page was renamed or archived?
 
-Recent changes are tracked in our [release notes](/CHANGELOG/).
+Recent changes live in the [State ledger](./state/index) and `ops/releases/` bundles.
 
 ## Still Stuck?
 
