chore: Update documentation frontmatter and structure across multiple files
- Added new fields: bucket, north_star_id, guardrail_id, cta_primary_label, cta_secondary_label, leading_metric, lagging_metric, decision_link, and date to various documentation files.
- Standardized tone and narrative_goal formatting in several documents.
- Updated the frontmatter schema to require new fields and added validation for date and metric fields.
- Modified the generate-state script to include new frontmatter fields for the State page.
- Enhanced the UX scan script to skip non-band A documents.

--- a/docs/404.md
+++ b/docs/404.md
@@ -10,6 +10,15 @@ last_reviewed: '2025-11-07'
 skip_cta: true
 nav:
   - none
+bucket: navigate
+north_star_id: ns-001
+guardrail_id: gr-101
+cta_primary_label: Open the Navigate path
+cta_secondary_label: See the Verify example
+leading_metric: m-nav-open
+lagging_metric: m-time-to-answer
+decision_link: /decisions/adopt-deep-embed-north-star
+date: '2025-11-07'
 ---
 
 # 404 - Page Not Found
