--- a/docs/governance/state/v2025.11-governance.md
+++ b/docs/governance/state/v2025.11-governance.md
@@ -1,12 +1,20 @@
 ---
-title: 'state snapshot - v2025.11-governance'
+title: state snapshot - v2025.11-governance
 owner: '@lop'
-band: 'A'
-change_type: 'patch'
-status: 'live'
+band: A
+change_type: patch
+status: live
 refresh_after_days: 30
 date: '2025-11-11'
-tag: 'v2025.11-governance'
+tag: v2025.11-governance
+bucket: operate
+north_star_id: ns-001
+guardrail_id: gr-103
+cta_primary_label: Run the guardrail pattern
+cta_secondary_label: Open the runbook
+leading_metric: m-lab-pass
+lagging_metric: m-defect-rate-changed-pages
+decision_link: /decisions/adopt-deep-embed-north-star
 ---
 
 # Governance state · v2025.11
