--- a/docs/signals/receipts/v2025.11-governance.md
+++ b/docs/signals/receipts/v2025.11-governance.md
@@ -1,12 +1,20 @@
 ---
-title: 'receipts - v2025.11-governance'
+title: receipts - v2025.11-governance
 owner: '@lop'
-band: 'A'
-change_type: 'patch'
-status: 'live'
+band: A
+change_type: patch
+status: live
 refresh_after_days: 30
 date: '2025-11-11'
-tag: 'v2025.11-governance'
+tag: v2025.11-governance
+bucket: learn
+north_star_id: ns-001
+guardrail_id: gr-105
+cta_primary_label: Review the dashboard
+cta_secondary_label: Read the receipts
+leading_metric: m-dashboard-freshness-days
+lagging_metric: m-decision-hit-rate
+decision_link: /decisions/adopt-deep-embed-north-star
 ---
 
 # Governance receipts · v2025.11
