feat(navigation): restructure navigation and add new 'Learn' and 'Mitigate' sections

--- a/docs/signals/receipts/v2025.11-navigate.md
+++ b/docs/signals/receipts/v2025.11-navigate.md
@@ -26,16 +26,19 @@ Exit metric: m-nav-open stays above baseline while m-time-to-answer improves 10%
 
 - m-nav-open: +8% vs prior tag (Cloudflare navigation events).
 - CTA engagement: Home hero + Start Here CTAs capture 61% of nav clicks.
+- Nav skeleton: 4-of-4 top-level buckets (navigate/operate/learn/mitigate) visible with opener pattern + receipts.
 
 ## quality
 
 - m-time-to-answer: 51 seconds median (down 12% vs baseline).
 - Quick-Run fixes: 2 of 2 interrupts cleared via Navigate playbooks.
+- 404 crawl: 0 failures across 312 scanned routes (Link Drift + sitemap pass during the mid-Nov crawl window).
 
 ## credibility
 
 - state freshness: 12 days.
 - receipts attachment rate: 100% of navigate PRs linked to this tag.
+- /legacy traffic: 3.4% of nav sessions (Cloudflare 7-day lookback) — below the 5% ceiling.
 
 ## dashboards
 
