--- a/docs/404.md
+++ b/docs/404.md
@@ -14,8 +14,8 @@ bucket: navigate
 north_star_id: ns-001
 guardrail_id: gr-101
 decision_id: dec-2025-11-chapter-ops-defaults
-cta_primary_label: Try the Navigate path
-cta_secondary_label: See example route
+cta_primary_label: start_with_chapter_scope
+cta_secondary_label: open_navigate_overview
 leading_metric: m-nav-open
 lagging_metric: m-time-to-answer
 date: '2025-11-07'
