--- a/docs/404.md
+++ b/docs/404.md
@@ -27,7 +27,7 @@ release_tag: site-v2025.11
 
 The page you tried to open doesn’t exist anymore, or the link was wrong.
 
-Exit metric: you leave this page with one working link to follow next.
+**Expected Takeaway:** you leave this page with one working link to follow next.
 
 ## Quick ways back in
 
@@ -40,7 +40,7 @@ Choose the option that sounds closest to what you needed.
 
 ### I was looking for chapter ops info
 
-- [See the chapter state (pilot)](./operate/state/web-frontend)
+- [See the chapter state (pilot)](./changelog/state/web-frontend)
 - [See who owns what · Steward roster](./operate/stewards)
 
 ### I was looking for “how we’re doing”
